Add validation of `NodePackage` schema when canvas did mount

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- TODO: remove 'unsafe-eval' from script-src (needs refactor of ajv code, maybe use ajv-cli) -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; style-src 'unsafe-inline'"
+      content="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-eval';"
     />
   </head>
   <body>
